--- a/Web Dev - Django/index.html
+++ b/Web Dev - Django/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Alcides Fernando Tiago">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Forms</title>
+    <title>Registration Form</title>
 </head>
 
 <body>
